--- a/.github/workflows/amiwork.yml
+++ b/.github/workflows/amiwork.yml
@@ -37,13 +37,23 @@ jobs:
 
         uses: actions/checkout@v2
 
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+            node-version: ${{ matrix.node-version }}
+
+      - run: npm install
+      - run: npm run build --if-present
+      - run: npm test
+
 
       - name: Zip all the webapp imp files
         run: |
           zip -r webapp.zip ./
           pwd ./webapp
 
-
+      - name: Validate PAcker Template
+        run: packer validate amiFinal.pkr.hcl
       
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
